--- a/Forum.AspServer/Areas/Admin/Views/Category/Details.cshtml
+++ b/Forum.AspServer/Areas/Admin/Views/Category/Details.cshtml
@@ -1,7 +1,25 @@
-﻿
+﻿@model Forum.Domain.Category
 @{
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<br />
+<h2 class="text-info">Category Details</h2>
+<br />
+<div class="border">
+    <div class="form-group row">
+        <div class="col-2">
+            <label asp-for="CategoryName"></label>
+        </div>
+        <div class="col-5">
+            <input asp-for="CategoryName" disabled class="form-control" />
+        </div>
+    </div>
 
+    <div class="form-group row">
+        <div class="col-5 offset-2">
+            <partial name="_DetailsAndBackToListButton" model="Model.CategoryID" />
+        </div>
+    </div>
+
+</div>
