--- a/Forum.AspServer/Areas/Admin/Views/Category/Edit.cshtml
+++ b/Forum.AspServer/Areas/Admin/Views/Category/Edit.cshtml
@@ -1,7 +1,36 @@
-﻿
+﻿@model Forum.Domain.Category
+
 @{
     ViewData["Title"] = "Edit";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<br />
+<br />
+<h2 class="text-info">Edit Category</h2>
+<br />
 
+<form method="post" asp-action="Edit">
+    <div class="border">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <input type="hidden" asp-for="CategoryID" />
+        <div class="form-group row">
+            <div class="col-2">
+                <label asp-for="CategoryName" class="col-form-label"></label>
+            </div>
+            <div class="col-5">
+                <input asp-for="CategoryName" class="form-control" />
+            </div>
+            <span asp-validation-for="CategoryName" class="text-danger"></span>
+        </div>
+        <div class="form-group row">
+            <div class="col-5 offset-2">
+                <partial name="_EditAndBackToListButton" model="Model.CategoryID" />
+            </div>
+        </div>
+    </div>
+</form>
+
+@section Scripts {
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
