--- a/Forum.AspServer/Areas/Admin/Views/Forum/Delete.cshtml
+++ b/Forum.AspServer/Areas/Admin/Views/Forum/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Forum.Domain.Category
+﻿@model Forum.Domain.ForumModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -7,23 +7,22 @@
 
 <br />
 <br />
-<h2 class="text-info">Delete Category</h2>
+<h2 class="text-info">Delete Forum</h2>
 <br />
 
 <form method="post" asp-action="Delete">
-    <input type="hidden" asp-for="CategoryID" />
     <div class="border">
         <div class="form-group row">
             <div class="col-2">
-                <label asp-for="CategoryName" class="col-form-label"></label>
+                <label asp-for="ForumName" class="col-form-label"></label>
             </div>
             <div class="col-5">
-                <input asp-for="CategoryName" readonly class="form-control" />
+                <input asp-for="ForumName" readonly class="form-control" />
             </div>
         </div>
         <div class="form-group row">
             <div class="col-5 offset-2">
-                <partial name="_DeleteAndBackToListButton" model="Model.CategoryID" />
+                <partial name="_DeleteAndBackToListButton" model="Model.ForumID" />
             </div>
         </div>
     </div>
